<resources>
    <string name="app_name">NoteKeep</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Every idea is worth keeping…</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>


    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="communicate">Communicate</string>
    <string name="notes">Notes</string>
    <string name="favourites">Favourites</string>
    <string name="trash">Trash</string>
    <string name="settings">Settings</string>
    <string name="feedback">FeedBack</string>

    <string name="colour">colour</string>
    <string name="description">Description</string>
    <string name="save">Save</string>

    <string name="title">Title</string>
    <string name="_10_dec_2019">10/dec/2019</string>
    <string name="title_edit">Edit Note</string>
    <string name="snack_bar_text">Undo Delete</string>


    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello NotesKeep!</string>
    <string name="slide_1_desc">Every idea is worth keeping!</string>

    <string name="slide_2_title">Favourites</string>
    <string name="slide_2_desc">Order your favourite notes!</string>

    <string name="slide_3_title">Share</string>
    <string name="slide_3_desc">Share important details with friends!</string>
    <string name="copy">Copy</string>
    <string name="share_using">share with</string>


    <!-- text size entries text -->

    <string name="text_tiny">tiny</string>
    <string name="text_small">Small</string>
    <string name="text_medium">Medium</string>
    <string name="text_large">Large</string>
    <string name="search">Search</string>

    <!-- text size values -->
    <string name="tiny_size" translatable="false">14</string>
    <string name="small_size" translatable="false">20</string>
    <string name="medium_size" translatable="false">24</string>
    <string name="large_size" translatable="false">28</string>


    <string name="font_serif">Serif</string>
    <string name="font_casual">Serif</string>
    <string name="font_italics">Serif</string>
    <string name="delete_all_notes">Delete All Notes</string>
    <string name="mark">Mark</string>
    <string name="delete_all_favourites">Delete all Favourites</string>
    <string name="restore_note">Restore Note</string>
    <string name="delete_permanently">Delete Permanently</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_note">Delete Note</string>


</resources>
